2001-04-18  Bill Schelter  <wfs@sonia.ma.utexas.edu>

	* Multiple changes to make maxima under cmulisp perform all the
	tests.
	* changes to plot.lisp to remove gcl dependencies.
	* move some system specific stuff to the compile-{clisp,cmulisp}
	files.  

2001-04-15  Bill Schelter  <wfs@sonia.ma.utexas.edu>
	* added the file specfun.mc from Barton Willis, and the
	documentation to the manual under Orthogonal Polynomials,
	just after Special Functions.

	*  added the special declarations, to the maxima to lisp
	compiler, so that the correct dynamic binding scenario is
	respected.

	* changed the default optimize level for compilation
	of the maxima files to -O4, by changing this in GCL. 
	
	*  added changes to integrate to handle the irreducible
	denominators if given rational function f/g, using the
	rootsof method.   To enable that use INTEGRATE_USE_ROOTSOF:true;

2001-04-06  Bill Schelter  <wfs@sonia.ma.utexas.edu>

	* Fix the install to install all share/*.lisp
	* Fix auto-mexpr which had a bug, but only seen
	with 'trigrat'
	* Fix file_search to also look for .lisp in share/*
	* have the install on MS Windows add the .mc and .lisp files in
	share
	

2001-03-30  Raymond Toy <toy@rtp.ericsson.se>
	
	compile-cmulisp.lisp:
	o Add some text to explain how to build it.
	o Add support for maxima's describe.
	o Changed the name of the core file to maxima.core.
	
	macdes.lisp:
	o Add $describe for CMUCL.
	
	init_max1.lisp:
	o Changed SYSTEM:: to SI::
	o Set up file extensions appropriately for searching.
	o Update user::run to load up the foreign code so describe works.
	
	mload.lisp:
	o In $file_search, symbols are passed to probe-file and friends.
	  Convert to strings.
	o In new-file-search, pass a string instead of NIL to
	    new-file-search1.
	    
	mactex.lisp:
	o Make tex(1.2e20) work on CMUCL, and change the output to 1.2 \times
	      10^{20} instead of \cdot.
	      
       clmacs.lisp:
        o most-positive-fixnum is too large a count for CMUCL in delq and